Added Title and Subtitle.

--- a/index.html
+++ b/index.html
@@ -6,10 +6,24 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <link href="style.css" rel="stylesheet">
     <script src="script.js"></script>
 </head>
-<body>
-
+<body id="body">
+<h1>Neumont Ping Pong Club</h1>
+<h2>Current Ranking</h2>
+<div class="div">
+    <ul id="sortable">
+        <li class="ui-state-highlight">Searjasub Lopez</li>
+        <li class="ui-state-default">Item 2</li>
+        <li class="ui-state-default">Item 3</li>
+        <li class="ui-state-default">Item 4</li>
+        <li class="ui-state-default">Item 5</li>
+        <li class="ui-state-default">Item 6</li>
+        <li class="ui-state-default">Item 7</li>
+    </ul>
+</div>
 </body>
 </html>
